# pt

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
app/: create_gif.py  main.py
src/: logger.py  main.py
src/utils/: emby.py  exocitaz.py  google.py  qbit.py  torrent.py
utils/: __init__.py
